--- a/build.gradle
+++ b/build.gradle
@@ -34,3 +34,10 @@ asciidoctor {
 	inputs.dir snippetsDir
 	dependsOn test
 }
+
+bootJar {
+	dependsOn asciidoctor
+	from ("${asciidoctor.outputDir}/html5") {
+		into 'static/docs'
+	}
+}
